2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Jonathan Matthew <notverysmart at gmail dot com>

	* ext/spc/gstspc.c: (gst_spc_dec_sink_event), (spc_setup):
	Post an error and push EOS when we can't start playback for some reason.
	also avoid a crash when fed an empty file. Fixes #480543.

2008-11-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* tests/check/elements/speexresample.c: (test_pipeline):
	Make unit test again faster to prevent timeouts with valgrind.

2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_event_send_rtcp_src):
	Fix event leak.

2008-11-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfmpeg.c: (mxf_mpeg_video_create_caps):
	* gst/mxf/mxfparse.c:
	(mxf_metadata_generic_picture_essence_descriptor_set_caps):
	* gst/mxf/mxfparse.h:
	Set video dimensions and pixel aspect ratio on the caps.

2008-11-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfdemux.c: (gst_mxf_demux_reset_metadata),
	(gst_mxf_demux_handle_metadata_generic_descriptor),
	(gst_mxf_demux_handle_metadata_file_descriptor),
	(gst_mxf_demux_handle_metadata_multiple_descriptor),
	(gst_mxf_demux_handle_metadata_generic_picture_essence_descriptor),
	(gst_mxf_demux_handle_metadata_cdci_picture_essence_descriptor),
	(gst_mxf_demux_handle_metadata_rgba_picture_essence_descriptor),
	(gst_mxf_demux_handle_metadata_mpeg_video_descriptor),
	(gst_mxf_demux_handle_metadata_generic_sound_essence_descriptor),
	(gst_mxf_demux_handle_metadata_wave_audio_essence_descriptor),
	(gst_mxf_demux_handle_header_metadata_resolve_references),
	(gst_mxf_demux_handle_metadata):
	* gst/mxf/mxfdemux.h:
	* gst/mxf/mxfparse.c:
	(mxf_metadata_rgba_picture_essence_descriptor_handle_tag),
	(mxf_metadata_rgba_picture_essence_descriptor_reset):
	* gst/mxf/mxfparse.h:
	* gst/mxf/mxftypes.h:
	Add initial parsing of RGBA descriptors.

	Don't initialize descriptor GArray with zeroes.
